<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:clickable="true">

    <FrameLayout
        android:id="@+id/event_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/circle_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="Image"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_nav_gallery" />
    </FrameLayout>

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/event_image"
        android:background="@drawable/circle_shape"
        android:contentDescription="backButton"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/event_image"
        app:layout_constraintHorizontal_bias="0.373"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038" />

    <EditText
        android:id="@+id/eventNameEditText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="Event name"
        android:layout_marginTop="30dp"
        android:maxLength="50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_image"
        app:layout_constraintHorizontal_bias="0.5"/>

    <!-- Start Date/Time Section -->
    <TextView
        android:id="@+id/startLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Start"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/eventNameEditText"
        app:layout_constraintStart_toStartOf="@+id/eventNameEditText"/>

    <EditText
        android:id="@+id/startDateEditText"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:hint="Date"
        android:focusable="false"
        android:drawablePadding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/startLabel"
        app:layout_constraintStart_toStartOf="@+id/startLabel"/>

    <EditText
        android:id="@+id/startTimeEditText"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:hint="Time"
        android:focusable="false"
        android:drawablePadding="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@+id/startDateEditText"
        app:layout_constraintStart_toEndOf="@+id/startDateEditText"/>

    <!-- End Date/Time Section -->
    <TextView
        android:id="@+id/endLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="End"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/startDateEditText"
        app:layout_constraintStart_toStartOf="@+id/startDateEditText"/>

    <EditText
        android:id="@+id/endDateEditText"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:hint="Date"
        android:focusable="false"
        android:drawablePadding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/endLabel"
        app:layout_constraintStart_toStartOf="@+id/endLabel"/>

    <EditText
        android:id="@+id/endTimeEditText"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:hint="Time"
        android:focusable="false"
        android:drawablePadding="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@+id/endDateEditText"
        app:layout_constraintStart_toEndOf="@+id/endDateEditText"/>

    <EditText
        android:id="@+id/locationEditText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="Location"
        android:maxLength="50"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/endDateEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="Add Description"
        android:maxLength="500"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/locationEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/attendeeLimitEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="16dp"
        android:hint="Attendee Limit"
        android:inputType="number"
        android:maxLength="5"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionEditText" />

    <CheckBox
        android:id="@+id/unlimitedAttendeeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="unlimited Attendee"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.169"
        app:layout_constraintStart_toEndOf="@+id/attendeeLimitEditText"
        app:layout_constraintTop_toBottomOf="@+id/descriptionEditText" />

    <CheckBox
        android:id="@+id/geolocationRequiredCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Require Geolocation"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/attendeeLimitEditText"
        app:layout_constraintTop_toBottomOf="@+id/attendeeLimitEditText" />


    <Button
        android:id="@+id/submitButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="Submit"
        android:backgroundTint="#8C7466"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>