...
        app:layout_constraintTop_toBottomOf="@id/queueup_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Facility Name Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/facilityNameInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Facility Name"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"

        app:layout_constraintBottom_toTopOf="@+id/facility_submit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitleTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
...
