...
        app:layout_constraintTop_toBottomOf="@id/queueup_title"
        app:layout_constraintHeight_max="650dp"
        android:clickable="true"
        />

    <ImageButton
        android:id="@+id/plusButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/circle_shape"
        android:scaleType="centerInside"
        android:src="@drawable/plus_shape"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
...
